--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
           <td class="fourth-column" id="second-amount">0</td>
           <td class="fifth-column" id="second-total">0</td>
         </tr>
+
+        <tr class="notFirst-row">
+          <td class="veryFirst-column">3</td>
+          <td class="first-column" id="third-button">
+            <button>&minus;</button>
+          </td>
+          <td class="second-column" id="third-name">Vịt tiềm lớn</td>
+          <td class="third-column" id="third-price">140k</td>
+          <td class="fourth-column" id="third-amount">0</td>
+          <td class="fifth-column" id="third-total">0</td>
+        </tr>
       </table>
     </div>
   </body>
